# mcpp

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  README.md  a.out  appveyor.yml  doxygen.conf  mcpp.cpp
.github/workflows/: cmake.yml  codeql.yml  docker-image.yml
.travis/: install.sh
doc/: doc.md
doc/html/: README_8md.html  algebra_8hpp.html  algebra_8hpp_source.html  annotated.html  classes.html  classvar_1_1matrix-members.html  classvar_1_1matrix.html  classvar_1_1matrix_1_1Col-members.html  classvar_1_1matrix_1_1Col.html  classvar_1_1matrix_1_1Col__coll__graph.map  classvar_1_1matrix_1_1Col__coll__graph.md5  classvar_1_1matrix_1_1Row-members.html  classvar_1_1matrix_1_1Row.html  classvar_1_1matrix_1_1Row__coll__graph.map  classvar_1_1matrix_1_1Row__coll__graph.md5  classvar_1_1matrix__coll__graph.map  classvar_1_1matrix__coll__graph.md5  classvar_1_1point.html  classvar_1_1point__coll__graph.map  classvar_1_1table-members.html  classvar_1_1table.html  classvar_1_1table__coll__graph.map  classvar_1_1table__coll__graph.md5  classvar_1_1table__inherit__graph.map  classvar_1_1table__inherit__graph.md5  classvar_1_1tree.html  classvar_1_1tree__coll__graph.map  constants_8hpp.html  constants_8hpp__dep__incl.map  constants_8hpp__dep__incl.md5  constants_8hpp__incl.map  constants_8hpp__incl.md5  constants_8hpp_source.html  differential_8hpp.html  differential_8hpp__dep__incl.map  differential_8hpp__dep__incl.md5  differential_8hpp__incl.map  differential_8hpp__incl.md5  differential_8hpp_source.html  dir_000000_000001.html  (+168 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  (+42 more)
doc/latex/: algebra_8hpp.tex  annotated.tex  classvar_1_1matrix.tex  classvar_1_1matrix_1_1Col.tex  classvar_1_1matrix_1_1Col__coll__graph.md5  classvar_1_1matrix_1_1Row.tex  classvar_1_1matrix_1_1Row__coll__graph.md5  classvar_1_1matrix__coll__graph.md5  classvar_1_1point.tex  classvar_1_1point__coll__graph.md5  classvar_1_1table.tex  classvar_1_1table__coll__graph.md5  classvar_1_1table__inherit__graph.md5  classvar_1_1tree.tex  classvar_1_1tree__coll__graph.md5  constants_8hpp.tex  constants_8hpp__dep__incl.md5  constants_8hpp__incl.md5  differential_8hpp.tex  differential_8hpp__dep__incl.md5  differential_8hpp__incl.md5  dir_09e761304027c904456130627fd4dcf5.tex  dir_09e761304027c904456130627fd4dcf5_dep.md5  dir_1385bd2483d1afdcde0dfa9aaedc2879.tex  dir_1ac8c584a2311ca062bb43cbcaebb9f4.tex  dir_1ac8c584a2311ca062bb43cbcaebb9f4_dep.md5  dir_25d299ead5ad88191ac2f2d25bef095e.tex  dir_26658cbd91f1aecb4cf76855d0c330bb.tex  dir_2b1a82f562d9d140ac52542949113255.tex  dir_2b97f0eb067416c511ded74a0cf87f9d.tex  dir_348221f04fff0f789742aea7cd63c2bd.tex  dir_42993ecc421d8c07334c9a0444b19a53.tex  dir_4cd83b732da33e26972dd88221fcb4f7.tex  dir_627040d70115e105397bdb429f987b1e.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_976250933b996c856fb3fe86613b4a46.tex  dir_976250933b996c856fb3fe86613b4a46_dep.md5  dir_b89f0d5d290a11cbae044ce561bc87aa.tex  dir_d75e03a618fa17d6f453b0e1d8f501af.tex  figure_8cpp.tex  (+71 more)
doc/xml/: algebra_8hpp.xml  classvar_1_1matrix.xml  classvar_1_1matrix_1_1Col.xml  classvar_1_1point.xml  classvar_1_1table.xml  classvar_1_1tree.xml  constants_8hpp.xml  differential_8hpp.xml  dir_09e761304027c904456130627fd4dcf5.xml  dir_1ac8c584a2311ca062bb43cbcaebb9f4.xml  dir_25d299ead5ad88191ac2f2d25bef095e.xml  dir_26658cbd91f1aecb4cf76855d0c330bb.xml  dir_2b1a82f562d9d140ac52542949113255.xml  dir_2b97f0eb067416c511ded74a0cf87f9d.xml  dir_348221f04fff0f789742aea7cd63c2bd.xml  dir_42993ecc421d8c07334c9a0444b19a53.xml  dir_4cd83b732da33e26972dd88221fcb4f7.xml  dir_627040d70115e105397bdb429f987b1e.xml  dir_976250933b996c856fb3fe86613b4a46.xml  dir_b89f0d5d290a11cbae044ce561bc87aa.xml  dir_d75e03a618fa17d6f453b0e1d8f501af.xml  figure_8hpp.xml  group__Getters.xml  group__Variables.xml  group__group1.xml  index.xml  integral_8hpp.xml  linear_8hpp.xml  mat_8hpp.xml  mathematic_8hpp.xml  matrix_8hpp.xml  mcpp_8hpp.xml  misc_8hpp.xml  mthvec_8hpp.xml  namespacealg.xml  namespacealg_1_1msc.xml  namespacealg_1_1seq.xml  namespacealg_1_1slv.xml  namespacecalc.xml  namespacecom.xml  (+33 more)
examples/: a.out  general  general.cpp  test  test.cpp
html/: md_README.html  pages.html
includes/: mcpp.hpp  plot.hpp
includes/algebra/: misc.hpp  sequence.hpp  solvers.hpp
includes/calculus/: differential.hpp  integral.hpp
includes/communication/: signals.hpp
includes/math/: mthvec.hpp  vector.hpp
includes/mathematic/: mathematic.hpp
includes/misc/: constants.hpp  misc.hpp  sequence.hpp  signals.hpp
includes/numerical/: linear.hpp  mat.hpp  numvec.hpp  vec.hpp  vect.hpp
includes/plot/: figure.hpp
includes/statistics/: stat.hpp
includes/stats/: statistics.hpp
includes/variables/: complex.hpp  matrix.hpp  others.hpp  table.hpp  tree.hpp  vecop.hpp  vector.hpp
includes/vectors/: vec.hpp  vector.hpp
latex/: md_README.tex
lib/: sfml_deps.sh
lib/SFML-2.5.1/: CMakeLists.txt
lib/SFML-2.5.1/SFML/: SFMLSharedTargets.cmake
lib/SFML-2.5.1/src/SFML/: CMakeLists.txt
lib/SFML-2.5.1/src/SFML/Graphics/: CMakeLists.txt
lib/cmake/: SFMLSharedTargets.cmake
lib/googletest/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
scripts/: linux.sh  macos.sh  windows.ps1
src/plot/: figure.cpp
src/variables/: graph.cpp  matrix.cpp  vector.cpp
tests/algebra/: algebra_test.cpp
tests/calculus/: differential_test.cpp
tests/stats/: stats_test.cpp
tests/variables/: matrix_test.cpp  table_test.cpp  vector_test.cpp
tests/vectors/: vector_test.cpp
(+3 files in other folders)
